--- a/sda_studies/src/App.css
+++ b/sda_studies/src/App.css
@@ -30,10 +30,37 @@
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(10px);
   }
+
   100% {
     transform: translateY(0px);
   }
+}
+
+.home-title {
+  margin-top: 100px;
+}
+
+.navbar {
+  background-color: blue;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+
+.navbar ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
+
+.navbar a {
+  margin-right: 20px;
+  text-decoration: none;
+  text-decoration-color: none;
+  color: inherit;
 }
